# shiba-poker

./: AUTOMATIONS.md  AUTOMATIONS_REGISTRY.md  CHANGELOG.md  CLAUDE.md  SYSTEM_AUDIT_2026-07-06.md  SYSTEM_HEALTH_CHECK.md  index.html
.github/workflows/: build-exe.yml
rubiks-cube/: README.md  index.html
rubiks-cube/js/: algs.js  app.js  cube.js  solver.js
statistical-validation/: README.md  index.html
statistical-validation-py/: .gitignore  README.md  pyproject.toml
statistical-validation-py/examples/: demo.ipynb  sample_data.xlsx
statistical-validation-py/packaging/: pv_entry.py
statistical-validation-py/packaging/windows/: 使用說明.txt
statistical-validation-py/src/process_validation/: __init__.py  advisor.py  anova.py  assumptions.py  chi_square.py  cli.py  datasets.py  f_test.py  posthoc.py  result.py  t_tests.py
statistical-validation-py/tests/: test_against_scipy.py  test_cli.py  test_twoway_and_extras.py
