[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "process-validation"
version = "1.0.0"
description = "製程改善統計檢定工具：對照 Excel 資料分析工具箱的 F / t / 卡方 / ANOVA 檢定"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
pv = "process_validation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
